# Observer

./: .gitignore  CMakeLists.txt  Observer.h  README.md  main.cpp
.github/workflows/: test.yaml
include/: Observer.h
tests/: CMakeLists.txt  test_observer.cpp
